--- a/Producer_Consumer_SEMAPHORE_MUTEX/README
+++ b/Producer_Consumer_SEMAPHORE_MUTEX/README
@@ -1,1 +1,13 @@
-To find the comparative analysis of counting semaphores vs Mutex for solving the producer consumer problem using Xinu OS and Beaglebone Black.
+## Biswajit Dey ##
+
+/* The following files & folders are included in this tar */
+**************************************************************************************
+1. main_mu.c(same as MUTEX/main.c)           - Mutex Code
+2. main_csem.c(same as CSEM/main.c           - Counting semaphores code
+3. DOS - Lab Assignment 1 - Biswajit Dey.pdf - PDF Resport
+
+Separate folders have been also created with main.c file for MUTEX and CSEM respectively.
+
+Both the files outside and inside directories are same. Please use as needed.
+
+***************************************************************************************
